翻译截止services-smart-contract 超级账本智能合约

--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -128,7 +128,7 @@
             <div class="container">
                 <h2 class="mt-40">为什么您的企业需要智能合约开发服务？</h2>
                 <div class="gor-100">
-                    <div class="h4">如果您需要执行和贯彻您的企业经营理念，智能合约可以为您的企业带来如下便利。</div>
+                    <div class="h4">如果您需要执行和贯彻您的企业经营理念，智能合约可以为您的企业带来多重便利。</div>
                 </div>
                 <div class="point-list point-list-accordion">
                     <div class="row">
@@ -164,7 +164,7 @@
                             <div class="point point-accordion">
                                 <h3>备份</h3>
                                 <div class="text">
-                                    <p>基于区块链的智能合约可以保证文档不会被丢失，合理分发和数据安全。</p>
+                                    <p>基于区块链技术的智能合约不会存在冗余、丢失的情况并且确保安全，防篡改。</p>
                                 </div>
                             </div>
                         </div>
@@ -195,8 +195,8 @@
                 <h2 class="mt-40">OpenLedger开发的智能合约</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        <p>通过智能合约来控制以太坊，EOS或超级账本中的业务流程自动化处理执行。</p>
-                        <p>将传统的技术和区块链特有的优势进行结合后可以根据您的业务需求量身定制合适的区块链解决方案。并且快速、安全的编写智能合约代码</p>
+                        <p>在以太坊(Ethereum)、EOS或超级账本(Hyperledger)中实现智能合约来自动化处理业务流程。</p>
+                        <p>将传统的技术和区块链技术进行结合后可以根据您的业务需求量身定制合适的解决方案。我们的专家可以快速、安全地编写完全符合您业务需求的智能合约代码。</p>
                     </div>
                 </div>
                 <div id="ethereum-smart-contracts"></div>
@@ -209,7 +209,7 @@
                                 <div class="text">
                                     <div class="new-list-wrap">
                                         <div class="new-list-col-4">
-                                            <p>我们开发的智能合约具有高度的安全性和可靠性等特点。通过Solidity语言编写的智能合约能够最大限度地提高您公司效率。</p>
+                                            <p>我们开发的智能合约具有高度的安全性和可靠性等特点，以满足您的业务需求。通过Solidity语言编写的智能合约能够最大限度地提高您公司效率。</p>
                                         </div>
                                         <div class="new-list-col-8">
                                             <div class="new-list">
@@ -236,7 +236,7 @@
                                 <div class="text">
                                     <div class="new-list-wrap">
                                         <div class="new-list-col-4">
-                                            <p>Hyperledger上的区块链智能合约开发具有非常多的优势。不管是在金融、医疗、零售、汽车或者其他行业，OpenLedger的团队都具有非常专业的知识来支持您的需求实现并提供解决方案。
+                                            <p>基于Hyperledger上的区块链智能合约开发具有非常多的优势。不管是在金融、医疗、零售、汽车或者其他行业，OpenLedger的团队都具有非常专业的知识来支持您的需求实现并提供解决方案。
                                             </p>
                                         </div>
                                         <div class="new-list-col-8">
