免费获取报价抽离

--- a/views/common/solutions.ejs
+++ b/views/common/solutions.ejs
@@ -39,8 +39,8 @@
                     <div class="explore-slide-icon">
                         <img src="/images/Uploads/real-estate.svg" alt="Real estate">
                     </div>
-                    <h3 class="explore-slide-title">房地产</h3>
-                    <p class="explore-slide-desc">探索区块链在房地产中的优势，包括数据管理和财务处理优化。</p>
+                    <h3 class="explore-slide-title">不动产</h3>
+                    <p class="explore-slide-desc">探索区块链在不动产中的优势，包括数据管理和财务处理优化。</p>
                     <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">了解更多</a>
                 </div>
 
