--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -167,24 +167,7 @@
             </div>
         </div>
 
-        <!-- Quote -->
-        <div class="block-call">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="/images/320_free_quote.svg"
-                            alt="">
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="block-call__text-btn">
-                            <h2>获得免费报价</h2>
-                            <p>给我们发送有关您未来项目的电话，我们将在一个工作日内与您联系以提供详细信息</p>
-                            <a href="#contact">联系我们</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div><!-- Quote -->
+        <% include ../common/quote.ejs %>
 
         <div class="eosio-apps">
             <div class="container">
@@ -287,8 +270,8 @@
                                 <img src="/images/Uploads/real-estate.svg"
                                     alt="Real estate">
                             </div>
-                            <h3 class="explore-slide-title">房地产</h3>
-                            <p class="explore-slide-desc">探索区块链在房地产中的优势，包括数据管理和财务处理优化。</p>
+                            <h3 class="explore-slide-title">不动产</h3>
+                            <p class="explore-slide-desc">探索区块链在不动产中的优势，包括数据管理和财务处理优化。</p>
                             <a href="/solutions/blockchain-real-estate/" class="explore-slide-link link">了解更多</a>
                         </div>
                         <div class="explore-slide">
