--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -139,23 +139,7 @@
                 </div>
             </div>
         </div>
-        <!-- Quote -->
-        <div class="block-call">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="/images/320_free_quote.svg" alt="">
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="block-call__text-btn">
-                            <h2>获得免费报价</h2>
-                            <p>给我们发送有关您未来项目的电话，我们将在一个工作日内与您联系以提供详细信息</p>
-                            <a href="#contact">联系我们</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- Quote -->
+        <% include ../common/quote.ejs %>
         <div class="container">
             <div class="enhance-business-content">
                 <h2>超级账本开发框架</h2>
