--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -90,7 +90,7 @@
                             </li>
                             <li id="menu-item-89" itemprop="url"
                                 class="dropdown menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-89 nav-item">
-                                <a title="Solutions" href="#"
+                                <a title="Solutions" href="/solutions"
                                     class="nav-link dropdown-toggle depth-0">解决方案<span></span></a>
                                 <ul itemprop="url" class="dropdown-menu solutions-cls">
                                     <li id="menu-item-90" itemprop="name"
@@ -114,7 +114,7 @@
                                     <li id="menu-item-1795" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1795">
                                         <a title="Real Estate" href="/solutions/real-estate" itemprop="url"
-                                            class="dropdown-item depth-1">房地产<span></span></a></li>
+                                            class="dropdown-item depth-1">不动产<span></span></a></li>
                                     <li id="menu-item-2070" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2070">
                                         <a title="Insurance" href="/solutions/insurance" itemprop="url"
