--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -65,30 +65,13 @@
                     <div class="bubble bubble-9 s-130">媒体和娱乐</div>
                     <div class="bubble bubble-10 s-170">医药</div>
                     <div class="bubble bubble-11 s-130">银行和金融科技</div>
-                    <div class="bubble bubble-12 s-130">房地产</div>
+                    <div class="bubble bubble-12 s-130">不动产</div>
                     <div class="bubble bubble-13 s-170">供应链管理</div>
                     <div class="bubble bubble-14 s-135">数字广告</div>
                 </div>
             </div>
         </div>
-        <!-- Quote -->
-        <div class="block-call">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="/images/320_free_quote.svg"
-                            alt="">
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="block-call__text-btn">
-                            <h2>获取免费报价</h2>
-                            <p>如果您对我们的区块链解决方案和服务有任何疑问，请联系我们。我们将会以最快的速度给您回复！</p>
-                            <a href="#contact">联系我们</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- Quote -->
+        <% include ../common/quote.ejs %>
         <div class="container">
             <h2>区块链定制开发</h2>
             <div class="gor-100 clearfix">
@@ -242,24 +225,8 @@
                 </div>
             </div> <!-- Technologies -->
         </div>
-        <!-- Quote -->
-        <div class="block-call">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="/images/320_free_quote.svg"
-                            alt="">
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="block-call__text-btn">
-                            <h2>免费获得报价</h2>
-                            <p>留下您的联系方式，我们会在一个工作日内与您联系给您提供更加详细的信息。</p>
-                            <a href="#contact">联系我们</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- Quote -->
+        
+        <% include ../common/quote.ejs %>
 
         <!-- Our Process -->
         <div class="container mt-60px solutions-tools">
