--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -171,25 +171,7 @@
                 </div>
             </div>
         </div>
-        <!-- Quote -->
-        <div class="block-call">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 col-sm-12 text-right-block">
-                        <img src="/images/320_free_quote.svg"
-                            alt="">
-                    </div>
-                    <div class="col-md-6 col-sm-12">
-                        <div class="block-call__text-btn">
-                            <h2>Get a FREE quote</h2>
-                            <p>Drop us a line about your future project, and we'll get back to you with details within
-                                one business day</p>
-                            <a href="#contact">Contact Us</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> <!-- Quote -->
+        <% include ../common/quote.ejs %>
         <div class="container">
             <div class="industry-is-covered-content">
                 <h2>Your industry is covered</h2>
